--- a/src/assets/styles/sass/comment.scss
+++ b/src/assets/styles/sass/comment.scss
@@ -28,4 +28,46 @@
         font-weight: 400;
         line-height: 2.4rem;
     }
+
+    &__new {
+        display: grid;
+        grid-template-areas: 'grid1 grid1'
+                             'grid2 grid3';
+    }
+
+    &__input {
+        grid-area: grid1;
+        border: 1px solid #E9EBF0;
+        border-radius: 8px;
+        background: inherit;
+        padding: 1.2rem 2.4rem;
+        min-height: 9.6rem;
+        font-weight: 400;
+        color: $Grayish-Blue;
+        margin-bottom: 1.6rem;
+    }
+
+    &__input:focus {
+        outline: 1px solid #5357B6;
+    }
+
+    &__user-image {
+        grid-area: grid2;
+        width: 3.2rem;
+        align-self: center;
+    }
+
+    &__submit {
+        grid-area: grid3;
+        color: $White;
+        text-transform: uppercase;
+        font-weight: 500;
+        line-height: 2.4rem;
+        width: 10.4rem;
+        height: 4.8rem;
+        border: none;
+        background: #5357B6;
+        border-radius: 8px;
+        justify-self: right;
+    }
 }
