--- a/src/assets/styles/sass/counter.scss
+++ b/src/assets/styles/sass/counter.scss
@@ -11,7 +11,7 @@
 
     &__subcontainer {
         width: 33%;
-        height: auto;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
