--- a/src/assets/styles/css/counter.css
+++ b/src/assets/styles/css/counter.css
@@ -9,7 +9,7 @@
 }
 .counter__subcontainer {
   width: 33%;
-  height: auto;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
